removed numpy unnecessary

--- a/homework/homework2/notebooks/00_project_setup.ipynb
+++ b/homework/homework2/notebooks/00_project_setup.ipynb
@@ -52,11 +52,7 @@
    "source": [
     "api_key = get_key()\n",
     "print(f\"API_KEY present: {api_key is not None}\")\n",
-    "print(f\"API Key is: {api_key}\")\n",
-    "\n",
-    "a = np.array([14323, 22342, 395])\n",
-    "b = np.array([41211, 5345, 63824])\n",
-    "print(f\"{a + b}\")"
+    "print(f\"API Key is: {api_key}\")\n"
    ]
   },
   {
