removing numpy unnecessary, guess it didnt execute the last time

--- a/homework/homework2/notebooks/00_project_setup.ipynb
+++ b/homework/homework2/notebooks/00_project_setup.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ba4f3da8",
    "metadata": {},
    "outputs": [
@@ -44,8 +44,7 @@
      "output_type": "stream",
      "text": [
       "API_KEY present: True\n",
-      "API Key is: dummykey_lol\n",
-      "[55534 27687 64219]\n"
+      "API Key is: dummykey_lol\n"
      ]
     }
    ],
