renaming the homework folders as per the structure given

--- a/homework/stage06_data-preprocessing/notebooks/stage06_data-preprocessing_homework-starter_old.ipynb
+++ b/homework/stage06_data-preprocessing/notebooks/stage06_data-preprocessing_homework-starter_old.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## intentionally entering missing values through MCAR"
+    "## intentionally entering missing values through MCAR, because dataset wasnt provided earlier"
    ]
   },
   {
